# Bananas

./: .dockerignore  .gitignore  .golangci.yml  .markdown-link-check.json  .markdownlint.json  .spellcheck.yml  .wordlist.txt  CI_CD_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile.scheduler  Dockerfile.worker  INTEGRATION_GUIDE.md  Makefile  PHASE_4_IMPLEMENTATION_PLAN.md  PROJECT_PLAN.md  PR_DESCRIPTION.md  PR_TITLE.txt  README.md  docker-compose.dev.yml  docker-compose.elasticsearch.yml  docker-compose.yml  go.mod  go.sum
.github/: README.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmarks.yml  codeql.yml  docker.yml  docs.yml  go-ci.yml  greetings.yml  integration-tests.yml  labeler.yml  python-sdk-ci.yml  stale.yml  typescript-sdk-ci.yml
cmd/: README.md
cmd/api/: main.go
cmd/scheduler/: main.go
cmd/worker/: main.go
docker/: .air.api.toml  .air.scheduler.toml  .air.worker.toml  Dockerfile.api  Dockerfile.dev  Dockerfile.scheduler  Dockerfile.worker
docs/: ADVANCED_FEATURES_ROADMAP.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  FRAMEWORK_COMPARISON.md  LOGGING.md  MULTI_TIER_WORKERS.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  PERIODIC_TASKS.md  PERIODIC_TASKS_DESIGN.md  PROFILING.md  PROTOBUF.md  README.md  RESULT_BACKEND_DESIGN.md  TASK_ROUTING_DESIGN.md  TASK_ROUTING_USAGE.md  TROUBLESHOOTING.md  WORKER_ARCHITECTURE_DESIGN.md
examples/complete_workflow/: README.md  main.go
examples/cron_scheduler/: README.md  main.go
examples/deployments/: README.md  docker-compose-default.yml  docker-compose-job-specialized.yml  docker-compose-specialized.yml  docker-compose-thin.yml  k8s-deployment.yml  k8s-hpa.yml
examples/result_backend/: README.md  main.go
examples/task_routing/: README.md
internal/: README.md
internal/config/: config.go  worker.go  worker_test.go
internal/errors/: recovery.go
internal/job/: payload.go  result.go  result_test.go  types.go  (+1 more)
pkg/: README.md
proto/: supplychain.proto  tasks.proto
scripts/: init-elasticsearch.sh
sdk/python/: README.md  pyproject.toml  requirements-dev.txt
sdk/python/bananas/: __init__.py  client.py  exceptions.py  models.py  queue.py  result_backend.py
sdk/python/examples/: basic_usage.py  scheduled_jobs.py
sdk/python/tests/: conftest.py  test_client.py  test_models.py  test_queue.py  test_result_backend.py
tests/: README.md  benchmark_test.go  integration_test.go  proto_benchmark_test.go  routing_test.go  scheduler_test.go
(+49 files in other folders)
